More text overflow fixes

--- a/public/theme.css
+++ b/public/theme.css
@@ -85,6 +85,8 @@ h1 {
 .staker-address-value {
   color: white;
   font-weight: bold;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .staker-amount {
